--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ p:first-of-type {
   font-weight: 500;
 }
 #phone{
-  margin-top: -100px;
+  margin-top: -65px;
   width: 300px;
   margin-left: 150px;
 }
@@ -286,7 +286,7 @@ p:first-of-type {
 .blue-band{
   width: 100%;
   height: 50px;
-  background-color: #27358d;
+  background-color: #29368e;
 }
 
 /* Footer */
