--- a/style.css
+++ b/style.css
@@ -286,7 +286,7 @@ p:first-of-type {
 .blue-band{
   width: 100%;
   height: 50px;
-  background-color: #29368e;
+  background-color: #27358d;
 }
 
 /* Footer */
@@ -297,3 +297,4 @@ p:first-of-type {
   height: 65px;
 }
 /* Fim do Footer */
+
