--- a/styles/default.css
+++ b/styles/default.css
@@ -164,7 +164,7 @@ p:first-of-type {
 
 /*Página inicial - mapa estático*/
 .static-map{
-  background-image: url("images/map.png");
+  background-image: url("~/images/map.png");
   background-size: 100%;
   height: 330px;
   background-attachment: fixed;
