--- a/styles/default.css
+++ b/styles/default.css
@@ -78,8 +78,8 @@ p:first-of-type {
 /*Mapa*/
 
 #map{
-  height: 750px;
-  width: 100%;
+  height: 80vh;
+  width: 75%;
 }
  /*Fim do Mapa*/
 
@@ -114,7 +114,7 @@ p:first-of-type {
 .navbar-nav li.presentation a.link{
   padding: 4px!important;
   margin: 30px auto 0;
-  font-weight: 500;
+  font-weight: 400;
 }
 .navbar-nav li.presentation a.link.active{
   font-weight: 600;
@@ -157,7 +157,7 @@ p:first-of-type {
   background-color: transparent;
 }
 .navbar-nav.alago-button{
-  width: 10.3%;
+  width: 11%;
 }
 .navbar-nav.alago-links .presentation{
   width: 17.5%;
@@ -239,6 +239,10 @@ p:first-of-type {
 
 .how-it-works{
   background-color: #ffffff;
+}
+.how-it-works.row{
+  margin-left: 0;
+  margin-right: 0;
 }
 .instructions{
   padding: 50px 80px 0 100px;
@@ -335,6 +339,10 @@ p:first-of-type {
 .footer{
   padding: 20px 90px;
   background: #02546c;
+}
+.footer.row{
+  margin-left: 0;
+  margin-right: 0;
 }
 .footer img.logo{
   height: 45px;
