--- a/styles/default.css
+++ b/styles/default.css
@@ -194,6 +194,9 @@ p:first-of-type {
 }
 
 @media only screen and (max-width: 768px){
+  #map{
+    height: 60vh;
+  }
   div.static-map h3{
     padding-top: 65px;
   }
