--- a/styles/default.css
+++ b/styles/default.css
@@ -216,6 +216,11 @@ p:first-of-type {
   html{
     background: #ffffff;
   }
+  div.static-map{
+    background-attachment: initial;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+  }
   #map{
     height: 68vh;
   }
@@ -321,7 +326,7 @@ p:first-of-type {
     right: 3px;
   }
   .alt-2.active .shape{
-    right: 30px!important;
+    right: 25px;
   }
   .material-button .shape{
     right: 0;
@@ -334,6 +339,9 @@ p:first-of-type {
     text-align: center;
     padding-left: 50px!important;
     padding-right: 50px!important;
+  }
+  div.instructions h1{
+    padding-left: 0;
   }
   .how-it-works .instructions h1{
     margin-top: 25px;
@@ -519,3 +527,18 @@ a.about-logo img{
 }
 /* Fim do About */
 
+
+/* Login */
+
+.login .tooltip-inner{
+  width: 75px;
+  font-size: 15px;
+}
+.login .tooltip.top{
+  padding-top: 3px;
+}
+.tooltip.top .tooltip-arrow{
+  bottom: 1px;
+}
+
+/* Fim do Login */
