--- a/styles/default.css
+++ b/styles/default.css
@@ -14,6 +14,7 @@ html {
   background: -moz-radial-gradient(ellipse farthest-corner, white 32.6%, #ecebe7 78.1%) #fff;
   background: -ms-radial-gradient(ellipse farthest-corner, white 32.6%, #ecebe7 78.1%) #fff;
   background: radial-gradient(ellipse farthest-corner, white 32.6%, #ecebe7 78.1%) #fff;
+  background: #ffffff;
 }
 
 body {
