--- a/styles/weather.css
+++ b/styles/weather.css
@@ -5,6 +5,7 @@
 	background-repeat: no-repeat;
     padding: 80px 0 10%;
 	min-height: 470px;
+	height: 90vh;
 }
 #weather-window{
     width: 40%;
@@ -58,7 +59,9 @@
 #weather-window .forecast .realfeel h2{
 	margin: 0;
 }
-
+.footer{
+	position: absolute;
+}
 
 @media only screen and (max-width: 768px){
 	.background-weather{
