--- a/styles/default.css
+++ b/styles/default.css
@@ -131,6 +131,7 @@ p:first-of-type {
 .navbar-nav li.presentation a.btn-alago{
   padding: 20px 30px!important;
   color: #ffffff!important;
+  outline: none;
 }
 .navbar-nav li.presentation a.link:hover{
   border-bottom: 2px solid #1f58a9;
