--- a/styles/login.css
+++ b/styles/login.css
@@ -373,7 +373,7 @@
 }
 
 body {
-   background-image: url(https://lh4.googleusercontent.com/-XplyTa1Za-I/VMSgIyAYkHI/AAAAAAAADxM/oL-rD6VP4ts/w1184-h666/Android-Lollipop-wallpapers-Google-Now-Wallpaper-2.png);
+   background-image: url('../images/pattern_blue.jpg');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
