--- a/styles/map.css
+++ b/styles/map.css
@@ -100,7 +100,7 @@
  /*Modal*/
 
 #alagoModal .modal-content{
-	border-radius: 20px;
+	border-radius: 10px;
 }
 #alagoModal .modal-header{
 	border-bottom: 0;
@@ -147,8 +147,8 @@
     width: 100%;
 	border-top-left-radius: 0;
     border-top-right-radius: 0;
-    border-bottom-left-radius: 16px;
-    border-bottom-right-radius: 16px;
+    border-bottom-left-radius: 7px;
+    border-bottom-right-radius: 7px;
     text-transform: uppercase;
     font-size: 23px;
     color: #ffffff;
@@ -193,7 +193,7 @@
 }
 
 .modal-body .radio-group {
-  border: solid 3px #675f6b;
+  border: solid 1px #675f6b;
   display: inline-block;
   border-radius: 10px;
   overflow: hidden;
@@ -201,6 +201,7 @@
   display: block;
   margin: 0 auto;
   padding: 0;
+  margin-top: 5px;
 }
 
 
