--- a/styles/profile.css
+++ b/styles/profile.css
@@ -70,9 +70,9 @@
    display: block;
    width: 40%;
    border: 0;
-   border-bottom: 1px solid #000000;
+   /*border-bottom: 1px solid #000000;*/
    outline: none;
-   margin-bottom: 15px;
+   /*margin-bottom: 15px;*/
 }
 #profile .favorites span{
    font-size: 20px;
@@ -113,3 +113,138 @@
 #color-favorite{
    margin-bottom: 40px;
 }
+
+/*Input do Modal*/
+
+* { box-sizing:border-box; }
+
+/* basic stylings ------------------------------------------ */
+
+.container.input{ 
+  font-family:'Roboto';
+  width:90%; 
+  margin:30px auto 0; 
+  display:block; 
+  background:#FFF;
+  padding:0 50px 10px;
+  text-align: left;
+}
+.container.input label{
+   padding-left: 0;
+}
+.input h2       { 
+  /*text-align:center; */
+  margin-bottom:50px; 
+}
+.input h2 small { 
+  font-weight:normal; 
+  color:#888; 
+  display:block; 
+}
+
+/* form starting stylings ------------------------------- */
+.input .group          { 
+  position:relative; 
+  margin-bottom:45px; 
+}
+.input .group input{
+   border-bottom: 2px solid!important;
+}
+.input input            {
+  font-size:18px;
+  padding:10px 10px 5px 5px;
+  display:block;
+  width:300px;
+  border:none;
+  border-bottom:1px solid #757575;
+}
+.input input:focus      { outline:none; }
+
+/* LABEL ======================================= */
+.input label             {
+  color:#999; 
+  font-size:18px;
+  font-weight:normal;
+  position:absolute;
+  pointer-events:none;
+  left:5px;
+  top:10px;
+  transition:0.2s ease all; 
+  -moz-transition:0.2s ease all; 
+  -webkit-transition:0.2s ease all;
+}
+
+/* active state */
+.input input:focus ~ label, input:valid ~ label       {
+  top:-20px;
+  font-size:14px;
+  color:#27358d;
+}
+input#option-one:valid ~ label{
+   color: red;
+}
+input#option-two:valid ~ label{
+   color: #27358d;
+}
+
+/* BOTTOM BARS ================================= */
+.input .bar    { position:relative; display:block; width:100%; }
+.input .bar:before, .bar:after   {
+  content:'';
+  height:2px; 
+  width:0;
+  bottom:1px; 
+  position:absolute;
+  background:#27358d; 
+  transition:0.2s ease all; 
+  -moz-transition:0.2s ease all; 
+  -webkit-transition:0.2s ease all;
+}
+.input .bar:before {
+  left:50%;
+}
+.input .bar:after {
+  right:50%; 
+}
+
+/* active state */
+.input input:focus ~ .bar:before, input:focus ~ .bar:after {
+  width:50%;
+}
+
+/* HIGHLIGHTER ================================== */
+.input .highlight {
+  position:absolute;
+  height:60%; 
+  width:100px; 
+  top:25%; 
+  left:0;
+  pointer-events:none;
+  opacity:0.5;
+}
+
+/* active state */
+.input input:focus ~ .highlight {
+  -webkit-animation:inputHighlighter 0.3s ease;
+  -moz-animation:inputHighlighter 0.3s ease;
+  animation:inputHighlighter 0.3s ease;
+}
+
+/* ANIMATIONS ================ */
+@-webkit-keyframes inputHighlighter {
+   from { background:; }
+  to  { width:0; background:transparent; }
+}
+@-moz-keyframes inputHighlighter {
+   from { background:; }
+  to  { width:0; background:transparent; }
+}
+@keyframes inputHighlighter {
+   from { background:; }
+  to  { width:0; background:transparent; }
+}
+
+.full{
+   width: 100%!important;
+}
+/*Fim do input do modal
