--- a/styles/default.css
+++ b/styles/default.css
@@ -3,6 +3,9 @@
 h1, h2, h3, h4{
 	font-family: 'Open Sans';
 }
+b{
+	font-family: 'Roboto';
+}
 * {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
