--- a/styles/profile.css
+++ b/styles/profile.css
@@ -40,7 +40,7 @@
 }
 #casa{
       background-color: yellow!important;
-   color: black;
+   color: black!important;
 }
 #trabalho{
          background-color: red!important;
