--- a/styles/profile.css
+++ b/styles/profile.css
@@ -12,7 +12,7 @@
 #profile .infos{
    padding-bottom: 40px
 }
-#profile .infos .box-name input{
+#profile .infos input{
    background-color: #ffffff;
 }
 #profile .infos label{
